--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -17,6 +17,7 @@ apply from: '../build.dependencies.gradle'
 
 android {
     namespace = 'org.firstinspires.ftc.teamcode'
+    buildToolsVersion '36.0.0'
 
     packagingOptions {
         jniLibs.useLegacyPackaging true
